--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,20 @@ body {
     font-family: 'Golos Text', sans-serif;
     display: block;
     color: #333;
+    margin: 0px;
+    padding: 0px;
 }
 
-/* hamburger */
+html {
+    overflow-x: hidden;
+}
+
+nav {
+    height: 0;
+    position: fixed;
+}
+
+/* Hamburger */
 
 #menuToggle
 {
@@ -12,7 +23,7 @@ body {
   position: relative;
   top: 50px;
   left: 50px;
-  
+
   z-index: 1;
   
   -webkit-user-select: none;
@@ -31,7 +42,6 @@ body {
 {
   color: tomato;
 }
-
 
 #menuToggle input
 {
@@ -105,6 +115,7 @@ body {
   margin: -100px 0 0 -50px;
   padding: 50px;
   padding-top: 125px;
+  height: 100vmax;
   
   background: #ededed;
   list-style-type: none;
@@ -327,7 +338,7 @@ h3 {
     animation: fadeIn 1s;
 }
 
-.fade-out { /* Use with 'classList.add' */
+.fade-out {
     animation: fadeOut 1s;
 }
 
