--- a/views/top.html
+++ b/views/top.html
@@ -107,7 +107,7 @@
                         一方、私は人に頼らずに一人で解決しようとしてしまう節があります。今までは挫折もなく大学高学年になってしまったが、大学に入り、建築設計課題にて自分の力にのみ頼れる状況に初めて置かれ、何度も挫折を繰り返してきました。大学入学時に親元を離れて新たな環境で一人暮らしをし、建築学という過酷な分野を専攻するという貴重な体験をしたことで、家族や友人、同僚などの力にどれほど自分が頼っていたかに気付かされました。建築設計は孤独で辛いと感じていた時も同じ体験をしている友人や仲間がいたことで頑張れました。また、建築学部の１期生として入学したため、先輩や前例のない環境にて友人と力を合わせて学を続けてきました。一人暮らしをして建築学を学ぶということは、東京を離れてまで入学した関西学院大学で過ごした時間で得た、私にとって最も成長をもたらしてくれた体験であると考えています。
                     </p>
                     <p id="self-analysis4">
-                        私は御社にとって即戦力となり得る人材であると考えます。新たな環境・チームに素早く馴染み、一人暮らしや大学生活を経て学んだ人との関わり方を駆使して、喜ばれるプロダクト・サービスを共に作り上げるための大きな戦力になれる自信があります。
+                        私は即戦力となり得る人材であると考えます。新たな環境・チームに素早く馴染み、一人暮らしや大学生活を経て学んだ人との関わり方を駆使して、喜ばれるプロダクト・サービスを共に作り上げるために必要な大きな歯車になれる自信があります。
                     </p>
                 </div>
             </div>
