--- a/styles/style.css
+++ b/styles/style.css
@@ -122,7 +122,7 @@ nav {
   padding-top: 125px;
   height: 100vmax;
   
-  background: white;
+  background: #fff;
   list-style-type: none;
   -webkit-font-smoothing: antialiased;
   
@@ -185,7 +185,7 @@ h3 {
 .main {
     margin: 0 auto;
     height: 100%;
-    background-color: rgba(197, 241, 255, 0.8);
+    background-color: #ffedd3;
 }
 
 .introduction {
@@ -234,7 +234,7 @@ h3 {
 
 .main-bg {
     width: 90%;
-    background-color: white;
+    background-color: #fff;
     padding: 10px;
     margin: 0 auto;
     margin-top: 30px;
