--- a/views/top.html
+++ b/views/top.html
@@ -18,6 +18,7 @@
                     <span></span>
                 <ul id="menu">
                     <button onclick="scrollToAboutMe()"><li>About Me</li></button>
+                    <button onclick="scrollToQualifications()"><li>Qualifications</li></button>
                     <button onclick="scrollToStudies()"><li>Studies</li></button>
                     <button onclick="scrollToSelfAnalysis()"><li>Self-Analysis</li></button>
                     <button onclick="toggleLanguage()"><li>EN /JP</li></button>
@@ -38,9 +39,14 @@
                 <p id="bio">2003年に東京で生まれ、7歳から13歳の間アメリカのカリフォルニア州にて育ち、帰国後に東京学芸大学附属国際中等教育学校に編入。大学は新たな環境を体験するために兵庫の関西学院大学に入学し、建築学を専攻。趣味はPCゲームとドライブ。</p>
                 
             </div>
-            <div class="main-bg">
+            <div class="qualifications-bg">
+                <div class="qualifications">
+                    <h3 class="entry" id="qualifications">Qualifications</h3>
+                </div>
+            </div>
+            <div class="studies-bg">
                 <div class="studies">
-                    <h3 id="studies">Studies</h3>
+                    <h3 class="entry" id="studies">Studies</h3>
                     <div class="studies-ex">
                         <div class="studies-text" >
                             <p id="studies1"><strong>大学3年　建築設計演習IV</strong></p>
@@ -69,7 +75,7 @@
                     <div class="studies-ex">
                         <div class="studies-text" >
                             <p id="studies5"><strong>株式会社インフラトップ インターン</br>アプリケーション制作</strong></p>
-                            <p id="studies6">(コードは <a href="https://www.github.com/kai9kono/bookers2">こちら</a>)
+                            <p id="studies6">(コードはこちら： <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>)
                             <br/>
                             <br/>
                             <p id="studies7">長期インターンの研修課題にて、Ruby及びRuby on Railsを新たなプログラミング言語として習得した。Bookersという、ユーザーが読んだ本のタイトルと意見を投稿し、投稿に対していいねやコメントができるという簡易的なアプリケーションを作成した。</p>
@@ -95,8 +101,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="self-analysis-bg">
                 <div class="self-analysis">
-                    <h3 id="self-analysis">Self-Analysis</h3>
+                    <h3 class="entry" id="self-analysis">Self-Analysis</h3>
                     <p id="self-analysis1">
                         大学にて建築学を専攻して学んだことは、UI・UXデザインにおいても活用できると考えています。建築設計を勉強してきた者として、建物は誰のために建てるのか、どのような営みが想定されるのか、などの顧客志向の考え方は培われていると考えます。私は個人的に視覚的なデザインはあまり得意ではなかったものの、設計する土地にはどのような用途の建物があるべきか、自分が使うとしたらどのような機能を期待するか、などのUXの観点からの考え方は得意だと自認しています。また、3DモデリングツールやCADソフトウェアに加え、プレゼンボード作成時にはIllustratorやPhotoShopなどのツールの使い方も熟知しています。こういった専門的な知識や、建築学で培ったものづくりに対する考え方を応用することで、使っていて心地の良いプロダクトやサービスの制作を目指したいと考えています。
                     </p>
