--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,7 @@ h3 {
     border-bottom:rgba(202, 202, 202, 0.5) 1px solid;
 }
 
-.studies h3 {
+.entry {
     margin-left: 2%;
     margin-right: 2%;
 }
@@ -232,7 +232,7 @@ h3 {
     margin-bottom: 5%;
 }
 
-.main-bg {
+.qualifications-bg, .studies-bg, .self-analysis-bg {
     width: 90%;
     background-color: #fff;
     padding: 10px;
@@ -241,10 +241,6 @@ h3 {
     border-radius: 10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     margin-bottom: 50px;
-}
-
-.studies,.projects,.self-analysis {
-    margin: 2%;
 }
 
 .studies-img1,.studies-img2 {
@@ -292,7 +288,7 @@ h3 {
 }
 
 .self-analysis p {
-    margin: 0 2% 2% 2%;
+    margin: 0 3% 2% 3%;
     text-indent: 15px;
 }
 
