--- a/views/top.html
+++ b/views/top.html
@@ -18,7 +18,7 @@
                     <span></span>
                 <ul id="menu">
                     <button onclick="scrollToAboutMe()"><li>About Me</li></button>
-                    <button onclick="scrollToQualifications()"><li>Qualifications</li></button>
+                    <button onclick="scrollToQualifications()"><li>Skills</li></button>
                     <button onclick="scrollToStudies()"><li>Studies</li></button>
                     <button onclick="scrollToSelfAnalysis()"><li>Self-Analysis</li></button>
                     <button onclick="toggleLanguage()"><li>EN /JP</li></button>
@@ -41,14 +41,47 @@
             </div>
             <div class="qualifications-bg">
                 <div class="qualifications">
-                    <h3 class="entry" id="qualifications">Qualifications</h3>
+                    <h3 class="entry" id="qualifications">Skills</h3>
+                    <br/>
+                    <div class="qualifications-container">
+                        <span class="qualifications-entry">
+                            <span class="qualification-img">
+                                <img src="../assets/images/language.png">
+                            </span>
+                            <span class="qualification-text">
+                                <h3>TOEFL 110</h3>
+                                <h3>TOEIC 985</h3>
+                                <h3>英検１級</h3>
+                                <br/>
+                                <p>アメリカに住んでいた経験から、ネイティブレベルの英語力を習得。現在でも当時の友人とこまめに連絡を取り、英語力の維持・向上を心がけている。</p>
+                            </span>
+                        </span> 
+                        <span class="qualifications-entry">
+                            <span class="qualification-img">
+                                <img src="../assets/images/illustrator_logo.png">
+                            </span>
+                            <span class="qualification-text">
+                                <h3>Adobe Illustrator</h3>
+                                <p>アメリカに住んでいた経験から、ネイティブレベルの英語力を習得。現在でも当時の友人とこまめに連絡を取り、英語力の維持・向上を心がけている。</p>
+                            </span>
+                        </span>
+                        <span class="qualifications-entry">
+                            <span class="qualification-img">
+                                <img src="../assets/images/cad_logo.png">
+                            </span>
+                            <span class="qualification-text">
+                                <h3>CAD / BIM</h3>
+                                <p>アメリカに住んでいた経験から、ネイティブレベルの英語力を習得。現在でも当時の友人とこまめに連絡を取り、英語力の維持・向上を心がけている。</p>
+                            </span>
+                        </span>
+                    </div>
                 </div>
             </div>
             <div class="studies-bg">
                 <div class="studies">
                     <h3 class="entry" id="studies">Studies</h3>
                     <div class="studies-ex">
-                        <div class="studies-text" >
+                        <div class="studies-text">
                             <p id="studies1"><strong>大学3年　建築設計演習IV</strong></p>
                             <br/>
                             <p id="studies2">大阪駅付近にある、お初天神の周りのビルを撤去し、新たな複合施設を設計する課題。オフィスと同等の収益を見込むための収容率と、観光客に向けた高層ホテルを設計した。また、お初天神にないため、必要だと感じた庭園を模した公園も設計。</p>
