--- a/views/top.html
+++ b/views/top.html
@@ -35,9 +35,11 @@
                 <br/>
             </div>
             <div class="biography">
-                <p id="aboutme">About Me</p>
-                <p id="bio">2003年に東京で生まれ、7歳から13歳の間アメリカのカリフォルニア州にて育ち、帰国後に東京学芸大学附属国際中等教育学校に編入。大学は新たな環境を体験するために兵庫の関西学院大学に入学し、建築学を専攻。趣味はPCゲームとドライブ。</p>
-                
+                <span id="bio-text">
+                    <p id="aboutme">About Me</p>
+                    <p id="bio">2003年に東京で生まれ、7歳から13歳の間アメリカのカリフォルニア州にて育ち、帰国後に東京学芸大学附属国際中等教育学校に編入。大学は新たな環境を体験するために兵庫の関西学院大学に入学し、建築学を専攻。趣味はPCゲームとドライブ。</p>    
+                </span>
+                <span id="portrait"></span>
             </div>
             <div class="qualifications-bg">
                 <div class="qualifications">
@@ -61,7 +63,7 @@
                             </span>
                             <span class="qualification-text">
                                 <h3>Adobe Illustrator</h3>
-                                <p>アメリカに住んでいた経験から、ネイティブレベルの英語力を習得。現在でも当時の友人とこまめに連絡を取り、英語力の維持・向上を心がけている。</p>
+                                <p>大学の課題のプレゼンテーションボードを作成する際に使用している。現在も学習中だが、将来的にポスターやプレゼンテーションなどの機会にも使えるため、学習している。</p>
                             </span>
                         </span>
                         <span class="qualifications-entry">
@@ -70,7 +72,16 @@
                             </span>
                             <span class="qualification-text">
                                 <h3>CAD / BIM</h3>
-                                <p>アメリカに住んでいた経験から、ネイティブレベルの英語力を習得。現在でも当時の友人とこまめに連絡を取り、英語力の維持・向上を心がけている。</p>
+                                <p>建築の設計図を作成する際に用いる専門的なソフトウェアだが、これらのソフトを学習したことでモデリングなどの概念を学べた。</p>
+                            </span>
+                        </span>
+                        <span class="qualifications-entry">
+                            <span class="qualification-img">
+                                <img src="../assets/images/coding_language.png">
+                            </span>
+                            <span class="qualification-text">
+                                <h3>HTML / CSS / JavaScript</h3>
+                                <p>建築の設計図を作成する際に用いる専門的なソフトウェアだが、これらのソフトを学習したことでモデリングなどの概念を学べた。</p>
                             </span>
                         </span>
                     </div>
