--- a/styles/style.css
+++ b/styles/style.css
@@ -191,15 +191,32 @@ h3 {
 .introduction {
     height: 100vh;
     text-align: center;
-    width: 33%;
+    width: 50%;
     margin: 0 auto;
+}
+
+.name-container {
+    position: relative; 
+    display: inline-block;
+    top: 50%;
+    transform: translate(0,-50%);
+    text-align: center;
+    width: 100%;
 }
 
 .name {
     position: relative;
     font-size: 40px;
-    top: 50%;
-    transform: translate(0,-50%);
+    width: 12em;
+    
+    overflow: hidden; 
+    border-right: .15em solid orange; 
+    white-space: nowrap;
+    margin: 0 auto; 
+    letter-spacing: 1em;
+    animation: 
+      typing 0.8s steps(8, end),
+      blink-caret .75s step-end infinite;
 }
 
 #en, #jp {
@@ -223,7 +240,7 @@ h3 {
 .biography {
     font-size: 18px;
     width: 100%;
-    padding: 0 10%;
+    padding: 0 50;
     height: 100vh;
     text-align: center;
 }
@@ -255,7 +272,7 @@ h3 {
     box-shadow: 0 0 100px 0 #ffedd3 inset;
 }
 
-.qualifications-bg, .studies-bg, .self-analysis-bg {
+.qualifications-bg, .studies-bg {
     width: 90%;
     background-color: #fff;
     padding: 10px;
@@ -266,6 +283,51 @@ h3 {
     margin-bottom: 50px;
 }
 
+.contact {
+    text-align: center;
+    padding: 2%;
+    width: 80%;
+    height: 50vh;
+    margin: 0 auto;
+}
+
+.contact-content {
+    text-align: center;
+    display: inline-block;
+    width: 100%;
+    margin-top: 7%;
+}
+
+.contact img {
+    height: 48px;
+}
+
+.contact-img {
+    position: relative;
+    width: 30%;
+    display: inline-block;
+    text-align: center;
+}
+
+#phone, #mail {
+    position: relative;
+    width: 65%;
+    text-align: left;
+    padding-left: 3%;
+    display: inline-block;
+    top: 50%;
+    transform: translate(0,-70%);
+}
+
+.contact-details {
+    text-align: left;
+    width: 40%;
+    display: inline-block;
+}
+
+.contact-details:last-child {
+    margin-left: 5%;
+}
 
 .qualifications-entry img {
     width: 64px;
@@ -280,6 +342,10 @@ h3 {
     margin-bottom: 5%;
     margin-top: 0;
     padding: 0;
+}
+
+#eiken {
+    font-weight: 500;
 }
 
 .qualifications-bg {
@@ -362,7 +428,7 @@ h3 {
     font-size: 12px;
 }
 
-.self-analysis p {
+.contact p {
     margin: 0 3% 2% 3%;
     text-indent: 15px;
 }
@@ -370,24 +436,24 @@ h3 {
 .arrow-button-left,.arrow-button-right {
     width: 30px;
     height: 25px;
-    background-color:rgba(66, 211, 255, 0.8);
+    background-color:#666;
     border: none;
     color: white;
-    font-size: 20px;
+    font-size: 10px;
     border-radius: 8px;
     transition: background-color 0.3s;
 }
 
 .arrow-button-left {
-    margin-right: 1%;
+    margin-right: 3%;
 }
 
 .arrow-button-right {
-    margin-left: 1%;
+    margin-left: 3%;
 }
 
 .arrow-button-right:hover,.arrow-button-left:hover {
-    background-color:rgba(197, 241, 255, 0.8);
+    background-color: #aaa;
     cursor: pointer;
 }
 
@@ -398,6 +464,8 @@ h3 {
 .fade-out {
     animation: fadeOut 1s;
 }
+
+/* animations */
 
 @keyframes fadeIn {
     from { opacity: 0; }
@@ -412,6 +480,17 @@ h3 {
 /* #desc::before {
     content: "Kai Kono";
 } */
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 12em }
+  }
+  
+  /* The typewriter cursor effect */
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+  }
 
 .scroll {
     padding-top: 20px;
