--- a/views/en.html
+++ b/views/en.html
@@ -21,7 +21,7 @@
                     <button onclick="scrollToQualifications()"><li>Skills</li></button>
                     <button onclick="scrollToStudies()"><li>Studies</li></button>
                     <button onclick="scrollToContact()"><li>Contact</li></button>
-                    <button onclick="toggleLanguage()"><li>EN /JP</li></button>
+                    <button onclick="toggleLanguage()"><li><a href="./index.html">EN /JP</a></li></button>
                 </ul>
             </div>
         </nav>
@@ -38,7 +38,13 @@
             <div class="biography">
                 <span id="bio-text">
                     <p id="aboutme">About Me</p>
-                    <p id="bio">2003年に東京で生まれ、7歳から13歳の間アメリカのカリフォルニア州にて育ち、帰国後に東京学芸大学附属国際中等教育学校に編入。大学は東京を離れ、兵庫の関西学院大学に入学し、建築学を専攻。趣味はPCゲームとドライブ。</p>    
+                    <p class="bio">I was born in Tokyo in 2003, and was raised in California from the age of 7 to 13. After returning, I entered Tokyo Gakugei University International Secondary School. After graduation, I left Tokyo to attend Kwansei Gakuin University in Hyogo. My hobbies are PC gaming and driving.</p>    
+                    <br/>
+                    <br/>
+                    <p class="bio">I have always been into creation, and sice I had experience in coding, I decided to major in architecture where I could utilize my skills fully. However, even during architectural design, I found myself fiddling with various softwares and programs, which led me to realize that I wanted to pursure in digital design. Specifically, I desire to pursure UI/UX design, since the field has much in common with architecture.</p> 
+                    <br/>
+                    <br/>
+                    <p class="bio">My favorite type of design is sipmle, natural, and easy on the eyes.</p>
                 </span>
                 <span id="portrait"></span>
             </div>
@@ -54,8 +60,8 @@
                             <span class="qualification-text">
                                 <h3>TOEFL 110</h3>
                                 <h3>TOEIC 985</h3>
-                                <h3 id="eiken">英検１級</h3>
-                                <p>アメリカに住んでいた経験から、ネイティブレベルの英語力を習得。現在でも当時の友人とこまめに連絡を取り、英語力の維持・向上を心がけている。</p>
+                                <h3 id="eiken">Eiken Grade 1</h3>
+                                <p>From my experience of living in the United States, I have acquired native level English. To this day, I keep contact with friends to maintain and improve my English skills. Through acquiring another language, I believe I learned to be more open-minded.</p>
                             </span>
                         </span> 
                         <span class="qualifications-entry">
@@ -64,7 +70,7 @@
                             </span>
                             <span class="qualification-text">
                                 <h3>HTML / CSS / JavaScript</h3>
-                                <p>小学校の頃にアメリカで通っていたプログラミングスクールでHTML・CSSを習得し、独学でjavascriptを習得。本ポートフォリオサイトもHTML・CSS・javascriptのみで構成されている。</p>
+                                <p>I learned HTML / CSS at a coding school I attended in the U.S. when I was in elementary school, and I learned Javascript on my own. This portfolio website is built purely with HTML, CSS, and JS.</p>
                             </span>
                         </span>
                         <span class="qualifications-entry">
@@ -73,7 +79,7 @@
                             </span>
                             <span class="qualification-text">
                                 <h3>Adobe Illustrator</h3>
-                                <p>大学の課題のプレゼンテーションボードを作成する際に使用している。現在も学習中だが、将来的にポスターやプレゼンテーションなどの機会にも使えるため、学習している。</p>
+                                <p>I learned how to use Adobe Softwares through creating posters and presentation boards in my university classes. Although I am still learning, I am able to create simple posters and presentations efficiently.</p>
                             </span>
                         </span>
                         <span class="qualifications-entry">
@@ -82,7 +88,7 @@
                             </span>
                             <span class="qualification-text">
                                 <h3>CAD / BIM</h3>
-                                <p>建築の設計図を作成する際に用いる専門的なソフトウェアだが、これらのソフトを学習したことでモデリングなどの視点・考え方を学べた。</p>
+                                <p>Although these softwares are professional ones specifically used in architecture, through learning these tools, I learned the perspectives and basics of 3D modeling and design.</p>
                             </span>
                         </span>
                     </div>
@@ -93,16 +99,16 @@
                     <h3 class="entry" id="studies">Studies</h3>
                     <div class="studies-ex">
                         <div class="studies-text">
-                            <p id="studies1"><strong>大学3年　建築設計演習IV</strong></p>
-                            <p id="studies6">(制作期間 7週間)</p>
+                            <p id="studies1"><strong>3rd Year Artitectural Design</strong></p>
+                            <p id="studies6">(Period: 7 Weeks)</p>
                             <br/>
                             <br/>
                             <div class="content">
-                                <p id="studies2">大阪駅付近にある、お初天神の周りのビルを撤去し、新たな複合施設を設計する課題。オフィスと同等の収益を見込むための収容率と、観光客に向けた高層ホテルを設計した。また、お初天神にないため、必要だと感じた庭園を模した公園も設計。</p>
+                                <p id="studies2">The task was to create a multi-purpose facility in place of the current offices buildings located by the Ohatsu-Tenjin shrine, near Osaka station. I created a hotel for tourists visiting the shrine to secure a similar revenue to the pervious office buildings. I also designed a park which has a similar axis reminiscing of a Japanese style garden. </p>
                                 <br/>
-                                <p id="studies3">この課題を通して、設計者として作りたいものと現実的に求められているもののバランスをとらなければいけないことを学んだ。複合施設とはいえ、元々オフィスで収益を得ていた地域には同等またはそれ以上の価値があるものを建設する必要があり、必ずしも設計者が絶対的権力を握っているとは限らない事実を学んだ。</p>
+                                <p id="studies3">Through this project, I learned that a realistic balance between what the designer wants to create and what is demanded must be considered. Even though a multi-purpose facility was demanded, there was still the need to secure the same or a larger revenue and capacity rate. I learned that the designer does not always have the power to create anything they want.</p>
                                 <br/>
-                                <p id="studies4">また、はじめてRevitというモデリングソフトをしようした課題でもあったため、新たなツールの使い方を学べた。以前は住宅などの設計で簡易的な図面を作るためにはCADが効率的だったが、大型の施設を作るためには緻密な設計より構造や素材がわかるプレゼンテーションの方が優れていると感じたため使用した。結果的にはより効率的だったため、ものによってツールを変えることの大切さも学べた。</p>
+                                <p id="studies4">Also, this was my first project utilizing Revit. In the short period I was given, I was able to learn a completely new tool. Before this project, I used AutoCAD, since it was more suited for homes and smaller facilities. In result, I learned the importance of choosing tools depending on the task, since Revit was a much more efficient option.</p>
                             </div>
                         </div>
                         
@@ -121,16 +127,15 @@
                         </div>
                     </div>
                     <div class="studies-ex">
-                        <div class="studies-text" >
-                            <p id="studies5"><strong>株式会社インフラトップ インターン</br>アプリケーション制作</strong></p>
-                            <p id="studies6"> (制作期間 1ヶ月、コードはこちら: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>)</p>
+                        <div class="studies-text" >Infratop Inc. Internship</br>Application Development</strong></p>
+                            <p id="studies6"> (Period: 1 month, Code here: <a href="https://www.github.com/kai9kono/bookers2" target="_blank">GitHub</a>)</p>
                             <br/>
                             <br/>
-                            <p id="studies7">長期インターンの研修課題にて、Ruby及びRuby on Railsを新たなプログラミング言語として習得した。Bookersという、ユーザーが読んだ本のタイトルと意見を投稿し、投稿に対していいねやコメントができるという簡易的なアプリケーションを作成した。</p>
+                            <p id="studies7">At a long-term Internship I took part in, I learned how to code with Ruby and Ruby on Rails. I created an application called Bookers, in which users could post the title and opinion of books they have read, and have them seen by other users.</p>
                             <br/>
-                            <p id="studies8">この課題を通して、初めてデータベース機能を持つアプリケーションを作成する経験ができた。今まで制作してきたプログラムやウェブサイトはデータベースがないものだったため、投稿フォームや投稿の保存と表示をする際のフローを理解することに苦労した。また、見本アプリを動かしながら仕組みを理解し、目標となるものを作るというプロセスも学べた。</p>
+                            <p id="studies8">This was my first time developing a product with a proper database. Since every code I have created before had no database I struggled to learn the basics of database and storage. However, I was able to learn the language and finish the project within a month.</p>
                             <br/>
-                            <p id="studies9">また、１ヶ月という期間でカリキュラムを学び制作を終えなければいけなかったため、時間管理能力も身についたと考えている。設計課題と同様に、期限までに作りたいものを一定のクオリティで仕上げるという経験をできたことはとても貴重だと感じた。</p>
+                            <p id="studies9">At the internship, I took part as a mentor to help students who are interested in becoming engineers learn coding. Through this, I learned how to communicate with people with different backgrounds, and to speak in an organized manner.</p>
                         </div>
                         
                         <div class="img-slideshow">
@@ -146,6 +151,17 @@
                                 <button class="arrow-button-left" onclick="moveSlide2(-1)"> ◀︎ </button>
                                 <button class="arrow-button-right" onclick="moveSlide2(1)"> ▶︎ </button>
                             </div>
+                        </div>
+                    </div>
+                    <div class="studies-ex">
+                        <div class="studies-text" id="kominka">
+                            <p id="studies10"><strong>3rd Year Old Home Restoration</strong></p>
+                            <br/>
+                            <br/>
+                            <p id="studies11">I am currently taking part in a project in my seminar, where we aim to reform an old vacant home located in Shiga into a facility with a different purpose. Although we are still researching details about the surrounding area, I took the role of creating the schematics and 3D model of the facility. Even though we just began, I have realized the importance of working as a team and taking responsibility of my own role.</p>
+                            <br/>
+                            <br/>
+                            <p id="studies12">I am also currently researching about my research topic in my seminar, "The viability of artificial intelligence in architectural design and reforming".</p>
                         </div>
                     </div>
                 </div>
